# SignEngine

./: README.md  api.py  pyproject.toml  pytest.ini
src/signengine/: api_client.py  config.py  gui.py  player.py  utils.py
src/signengine/api_clients/: pexels_client.py
tests/: test_api_client.py  test_pexels_client.py  test_player.py  test_utils.py
